--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+# Core Requirements
+python>=3.8,<3.12
+pandas>=1.3.0
+numpy>=1.21.0
+scipy>=1.7.0
+scikit-learn>=1.0.0
 
+# Process Mining
+pm4py>=2.3.0
+declare4py>=1.0.0
+
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Utilities
+python-dateutil>=2.8.2
+pytz>=2021.3
+tqdm>=4.62.0
+
+# Development (optional)
+jupyter>=1.0.0
+black>=22.3.0
+flake8>=4.0.0
+pytest>=7.0.0
